--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -5,9 +5,34 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 body {
-  width: 100vw;
+  --scrollbar-width: calc(100vw - 100%);
+  width: calc(100vw - var(--scrollbar-width));
   overflow-x: hidden;
+  background-color: $baseBackground;
 }
+
+// media queries
+$phones: "screen and (max-width: 600px)";
+$phonesLarge: "only screen and (min-width: 600px)";
+$tabletsLandscape: "only screen and (min-width: 768px)";
+$laptops: "only screen and (min-width: 992px)";
+$laptopsLarge: "only screen and (min-width: 1200px)";
+
+/* Extra small devices (phones, 600px and down) */
+// @media only screen and (max-width: 600px) {...}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+// @media only screen and (min-width: 600px) {...}
+
+/* Medium devices (landscape tablets, 768px and up) */
+// @media only screen and (min-width: 768px) {...}
+
+/* Large devices (laptops/desktops, 992px and up) */
+// @media only screen and (min-width: 992px) {...}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+// @media only screen and (min-width: 1200px) {...}
