Make style correction / Add drop-down menu

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -9,8 +9,6 @@
 }
 
 body {
-  --scrollbar-width: calc(100vw - 100%);
-  width: calc(100vw - var(--scrollbar-width));
   overflow-x: hidden;
   background-color: $baseBackground;
 }
@@ -21,18 +19,4 @@ $phonesLarge: "only screen and (min-width: 600px)";
 $tabletsLandscape: "only screen and (min-width: 768px)";
 $laptops: "only screen and (min-width: 992px)";
 $laptopsLarge: "only screen and (min-width: 1200px)";
-
-/* Extra small devices (phones, 600px and down) */
-// @media only screen and (max-width: 600px) {...}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-// @media only screen and (min-width: 600px) {...}
-
-/* Medium devices (landscape tablets, 768px and up) */
-// @media only screen and (min-width: 768px) {...}
-
-/* Large devices (laptops/desktops, 992px and up) */
-// @media only screen and (min-width: 992px) {...}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-// @media only screen and (min-width: 1200px) {...}
+$largeScreen: "only screen and (min-width: 1920px)";
