--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -11,7 +11,7 @@
 body {
   overflow-x: hidden;
   background-color: $baseBackground;
-  font-family: "Gilroy", Futura, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Inter", Futura, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 // media queries
