--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -6,7 +6,7 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: "Inter", Futura, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Inter", Roboto, sans-serif;
 }
 
 body {
