--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -6,7 +6,7 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: "Inter", Roboto, sans-serif;
+  font-family: "Inter", Roboto, Arial, Helvetica, sans-serif;
 }
 
 body {
