--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -6,13 +6,12 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: "Inter", Roboto, Arial, Helvetica, sans-serif;
+  font-family: "Inter", Roboto, Arial, Helvetica;
 }
 
 body {
   overflow-x: hidden;
   background-color: $baseBackground;
-
 }
 
 // media queries
