Fix default font

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -12,6 +12,7 @@
 body {
   overflow-x: hidden;
   background-color: $baseBackground;
+  font-family: "Inter", Roboto, Arial, Helvetica;
 }
 
 // media queries
